--- a/python/jnz.ipynb
+++ b/python/jnz.ipynb
@@ -24,28 +24,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e3ad8b85",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'data_list' is not defined",
+     "evalue": "name 'n' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m center_list \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      2\u001b[0m A_list \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata_list\u001b[49m[\u001b[38;5;241m1\u001b[39m:]:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(e[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m13\u001b[39m])\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      5\u001b[0m         center_list\u001b[38;5;241m.\u001b[39mappend(e[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m13\u001b[39m]\u001b[38;5;241m.\u001b[39msplit()[\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data_list' is not defined"
+      "Cell \u001b[1;32mIn[3], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mprint\u001b[39m(n)\n\u001b[1;32m---> 15\u001b[0m A_list\u001b[38;5;241m.\u001b[39mappend(\u001b[43mn\u001b[49m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(A_list)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'n' is not defined"
      ]
     }
    ],
    "source": [
-    "center_list = []\n",
+    "data_list = []\n",
     "A_list = []\n",
-    "for e in data_list[1:]:\n",
+    "for e in A_list[1:]:\n",
     "    if len(e[-13])>0:\n",
-    "        center_list.append(e[-13].split()[0])\n",
+    "        A_list.append(e[-13].split()[0])\n",
     "    \n",
     "    \n",
     "#print(center_list)\n",
