--- a/python/Day04_lott.ipynb
+++ b/python/Day04_lott.ipynb
@@ -152,7 +152,7 @@
     "    d = dev(num_list)\n",
     "    return sum([x*x for x in d])/(n-1)\n",
     "\n",
-    "def stdev(num_list):\n",
+    "def stdev(num_list): #표준편차  (분산에 루트)\n",
     "    return math.sqrt(var(num_list))\n",
     "        \n",
     "\n",
