--- a/python/jnz.ipynb
+++ b/python/jnz.ipynb
@@ -24,19 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e3ad8b85",
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'n' is not defined",
+     "evalue": "name 'center_list' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mprint\u001b[39m(n)\n\u001b[1;32m---> 15\u001b[0m A_list\u001b[38;5;241m.\u001b[39mappend(\u001b[43mn\u001b[49m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(A_list)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'n' is not defined"
+      "Cell \u001b[1;32mIn[4], line 10\u001b[0m\n\u001b[0;32m      5\u001b[0m         A_list\u001b[38;5;241m.\u001b[39mappend(e[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m13\u001b[39m]\u001b[38;5;241m.\u001b[39msplit()[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#print(center_list)\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcenter_list\u001b[49m:\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28mprint\u001b[39m(n[\u001b[38;5;241m1\u001b[39m:])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'center_list' is not defined"
      ]
     }
    ],
@@ -63,21 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "82cb57d5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7 1\n",
-      "5 1\n",
-      "14 1\n",
-      "2 7\n",
-      "4 3\n",
-      "0 160\n",
-      "1 118\n"
+     "ename": "NameError",
+     "evalue": "name 'center_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mset\u001b[39m(\u001b[43mcenter_list\u001b[49m):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(n, center_list\u001b[38;5;241m.\u001b[39mcount(n))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'center_list' is not defined"
      ]
     }
    ],
