0207 자바 소켓통신 /  파이썬 정리본

--- a/python/Day07_mpg.ipynb
+++ b/python/Day07_mpg.ipynb
@@ -1,12 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "294257aa",
+   "cell_type": "markdown",
+   "id": "e0808d59",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 자동차 연비 데이터 정제\n",
+    "\n",
+    "uci repo\n",
+    "url:https://archive.ics.uci.edu/ml/machine-learning-databases/auto-mpg/auto-mpg.data\n",
+    "\n",
+    "* requests 패키지 이용 데이터 로딩.\n",
+    "* 최대한 많이 정제"
+   ]
   }
  ],
  "metadata": {
