--- a/python/Day12_perm_combi.ipynb
+++ b/python/Day12_perm_combi.ipynb
@@ -56,11 +56,8 @@
     "        r.append(set(b_i))\n",
     "    f = []\n",
     "    for r_i in r:\n",
-    "        f.append(r_i)\n",
-    "        while r_i in r:\n",
-    "            r.remove(r_i)\n",
-    "    if r:\n",
-    "        f.append(r[0])\n",
+    "        if r_i not in f:\n",
+    "            f.append(r_i)\n",
     "    return len(f), f"
    ]
   },
