--- a/python/Day15_abalone.ipynb
+++ b/python/Day15_abalone.ipynb
@@ -184,10 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "35a7dcc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table abalone2 already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m con \u001b[38;5;241m=\u001b[39m sqlite3\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest.db\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      3\u001b[0m cur \u001b[38;5;241m=\u001b[39m con\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[1;32m----> 4\u001b[0m \u001b[43mcur\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCREATE TABLE abalone2(length real, diameter real)\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m cur\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mINSERT INTO abalone2(length, diameter) values(10.0, 20.0)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m con\u001b[38;5;241m.\u001b[39mcommit()\n",
+      "\u001b[1;31mOperationalError\u001b[0m: table abalone2 already exists"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "con = sqlite3.connect(\"test.db\")\n",
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2437250a",
    "metadata": {},
    "outputs": [
@@ -215,6 +227,7 @@
    "source": [
     "con = sqlite3.connect(\"test.db\")\n",
     "cur = con.cursor()\n",
+    "\n",
     "res = cur.execute(\"SELECT * from abalone2\")\n",
     "print(res.fetchall())"
    ]
