0227 파이선 정리

--- a/python/Day19_강좌풀이.ipynb
+++ b/python/Day19_강좌풀이.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c02b87d3",
    "metadata": {},
    "outputs": [
@@ -96,8 +96,8 @@
       "강사명                        object\n",
       "교육시작일자             datetime64[ns]\n",
       "교육종료일자             datetime64[ns]\n",
-      "교육대상구분                     object\n",
-      "교육방법구분                     object\n",
+      "교육대상구분                   category\n",
+      "교육방법구분                   category\n",
       "운영요일                       object\n",
       "교육장소                       object\n",
       "강좌정원수                       int64\n",
@@ -106,24 +106,16 @@
       "운영기관명                      object\n",
       "접수시작일자             datetime64[ns]\n",
       "접수종료일자             datetime64[ns]\n",
-      "접수방법구분                     object\n",
-      "선정방법구분                     object\n",
+      "접수방법구분                   category\n",
+      "선정방법구분                   category\n",
       "홈페이지주소                     object\n",
-      "직업능력개발훈련비지원강좌여부            object\n",
-      "학점은행제평가(학점)인정여부            object\n",
-      "평생학습계좌제평가인정여부              object\n",
+      "직업능력개발훈련비지원강좌여부          category\n",
+      "학점은행제평가(학점)인정여부          category\n",
+      "평생학습계좌제평가인정여부            category\n",
       "데이터기준일자            datetime64[ns]\n",
-      "제공기관코드                     object\n",
+      "제공기관코드                   category\n",
       "제공기관명                      object\n",
       "dtype: object\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ITPS\\AppData\\Local\\Temp\\ipykernel_13204\\440460424.py:3: FutureWarning: Passing unit-less datetime64 dtype to .astype is deprecated and will raise in a future version. Pass 'datetime64[ns]' instead\n",
-      "  pd_data[col_name] = pd_data[col_name].astype(np.datetime64, copy = False)\n"
      ]
     }
    ],
@@ -131,7 +123,7 @@
     "for col_name in pd_data.columns:\n",
     "    if '일자' in col_name:\n",
     "        pd_data[col_name] = pd_data[col_name].astype(np.datetime64, copy = False)\n",
-    "    elif ('구분' in col_name) or ('여부' in col_name) or ('코드' in col_name)\n",
+    "    elif ('구분' in col_name) or ('여부' in col_name) or ('코드' in col_name):\n",
     "        pd_data[col_name] = pd_data[col_name].astype('category', copy = False)\n",
     "    \n",
     "print(pd_data.dtypes)\n",
@@ -140,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "66cbfd72",
    "metadata": {},
    "outputs": [
@@ -170,7 +162,7 @@
        "Name: 제공기관명, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "aa4374ac",
    "metadata": {
     "scrolled": true
@@ -218,7 +210,7 @@
        "Name: 운영요일, Length: 218, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
