0302 파이선 정리

--- a/python/Day21_Oneway.ipynb
+++ b/python/Day21_Oneway.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f5140908",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
+    "\n",
     "\n",
     "pd_raw = pd.read_csv('전국일방통행도로표준데이터.csv', encoding = 'cp949')\n",
     "\n",
@@ -307,6 +309,17 @@
     "pd_data_f = pd_data.dropna()\n",
     "print(pd_data.shape)\n",
     "print(pd_data_f.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a41b4cd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('전국일방통행도로표준데이터.pickle', 'wb') as f:\n",
+    "    pickle.dump(pd_data, f)"
    ]
   }
  ],
