--- a/python/Untitled.ipynb
+++ b/python/Untitled.ipynb
@@ -2,129 +2,123 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f26844b5",
+   "execution_count": 12,
+   "id": "fa0f854b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>시점</th>\n",
-       "      <th>공항</th>\n",
-       "      <th>항구</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>시점</td>\n",
-       "      <td>김해</td>\n",
-       "      <td>부산</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022.01</td>\n",
-       "      <td>938</td>\n",
-       "      <td>3279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022.02</td>\n",
-       "      <td>855</td>\n",
-       "      <td>3179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022.03</td>\n",
-       "      <td>986</td>\n",
-       "      <td>3418</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022.04</td>\n",
-       "      <td>1823</td>\n",
-       "      <td>3158</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        시점    공항    항구\n",
-       "0       시점    김해    부산\n",
-       "1  2022.01   938  3279\n",
-       "2  2022.02   855  3179\n",
-       "3  2022.03   986  3418\n",
-       "4  2022.04  1823  3158"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "petal_length\n",
+      "     petal_length  petal_width  sepal_length  sepal_width           class\n",
+      "0             4.9          3.0           1.4          0.2     Iris-setosa\n",
+      "1             4.7          3.2           1.3          0.2     Iris-setosa\n",
+      "2             4.6          3.1           1.5          0.2     Iris-setosa\n",
+      "3             5.0          3.6           1.4          0.2     Iris-setosa\n",
+      "4             5.4          3.9           1.7          0.4     Iris-setosa\n",
+      "..            ...          ...           ...          ...             ...\n",
+      "144           6.7          3.0           5.2          2.3  Iris-virginica\n",
+      "145           6.3          2.5           5.0          1.9  Iris-virginica\n",
+      "146           6.5          3.0           5.2          2.0  Iris-virginica\n",
+      "147           6.2          3.4           5.4          2.3  Iris-virginica\n",
+      "148           5.9          3.0           5.1          1.8  Iris-virginica\n",
+      "\n",
+      "[149 rows x 5 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ITPS\\AppData\\Local\\Temp\\ipykernel_2628\\1750008213.py:34: FutureWarning: The default value of numeric_only in DataFrame.mean is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "  pd_iris.mean()\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import random\n",
+    "\n",
+    " \n",
+    "\n",
+    "random.seed(123)\n",
+    "\n",
+    "pd_iris = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data')\n",
+    "\n",
+    "pd_iris.columns = ['petal_length', 'petal_width', 'sepal_length', 'sepal_width', 'class']\n",
+    "\n",
+    "rand_axis0 = [random.randint(0,150) for _ in range(5)]\n",
+    "\n",
+    "rand_axis1 = [random.randint(0, 4) for _ in range(5)]\n",
+    "\n",
+    "pd_iris.iloc[rand_axis0, rand_axis1] = np.NaN\n",
+    "\n",
+    " \n",
+    "\n",
+    "rand_axis0 = [random.randint(0,150) for _ in range(5)]\n",
+    "\n",
+    "rand_axis1 = [random.randint(0, 4) for _ in range(5)]\n",
+    "\n",
+    "pd_iris.iloc[rand_axis0, rand_axis1] = 123.4 + random.randint(0,4)/10\n",
+    "\n",
+    " \n",
+    "\n",
+    "df1 = pd.DataFrame(np.arange(100, 120).reshape(4,5), dtype='str')\n",
+    "\n",
+    "print('petal_length')\n",
+    "pd_iris.mean()\n",
+    "\n",
+    "pd_iris['petal_length'].value_counts()\n",
+    "\n",
+    "print(pd_iris)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ae138482",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     5.1  3.5  1.4  0.2     Iris-setosa\n",
+      "0    4.9  3.0  1.4  0.2     Iris-setosa\n",
+      "1    4.7  3.2  1.3  0.2     Iris-setosa\n",
+      "2    4.6  3.1  1.5  0.2     Iris-setosa\n",
+      "3    5.0  3.6  1.4  0.2     Iris-setosa\n",
+      "4    5.4  3.9  1.7  0.4     Iris-setosa\n",
+      "..   ...  ...  ...  ...             ...\n",
+      "148  5.9  3.0  5.1  1.8  Iris-virginica\n",
+      "149  100  101  102  103             104\n",
+      "150  105  106  107  108             109\n",
+      "151  110  111  112  113             114\n",
+      "152  115  116  117  118             119\n",
+      "\n",
+      "[153 rows x 5 columns]\n"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "pd_data = pd.read_csv(\"내국인출국교통수단별_20230302165121.csv\", encoding = 'cp949')\n",
-    "pd_data.columns = ['시점', '공항', '항구']\n",
-    "pd_data.head()\n",
-    "\n",
-    "# 공항, 항구 월별 출국 인원 plot\n",
-    "# normalization /standardization 적용, plot\n",
-    "# 2015년부터 2022년까지의 추이 보기\n",
-    "# 2022년 연말 공항 이용객 증가\n",
-    "# 2022년 연말에 공항 출국 인원이 늘어난 것이 항구 출국인원에도 반영되었는가\n",
-    "\n",
-    "#pd_data['공항_norm'] = pd_data['공항'].apply(lambda x: (x-bmi_min)/(bmi_max-bmi_min))\n",
-    "\n",
-    "# .sort_values()\n",
-    "# .sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "8b05ee3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col_selection = ['시점', '공항', '항구']\n",
-    "\n",
-    "dt+time = pd.to_datetime(pd_data['시점'], format= )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e984e7c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, axe = plt.subplots()\n",
+    " \n",
     "\n",
     "\n",
-    "\n"
+    "pd_iris = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data')\n",
+    "\n",
+    "pd_iris.loc[149] = ['100', '101', '102', '103', '104']\n",
+    "pd_iris.loc[150] = ['105', '106', '107', '108', '109']\n",
+    "pd_iris.loc[151] = ['110', '111', '112', '113', '114']\n",
+    "pd_iris.loc[152] = ['115', '116', '117', '118', '119']\n",
+    "print(pd_iris)"
    ]
   }
  ],
